--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ add_executable(${PROJECT_NAME}
 	src/Renderer/Sprite.h
 	src/Renderer/AnimatedSprite.cpp
 	src/Renderer/AnimatedSprite.h
+	src/Game/Tank.cpp
+	src/Game/Tank.h
+	src/Game/Game.h
+	src/Game/Game.cpp
 	)
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
